css/style.css
*,
*::before,
*::after {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

:root {
  --primary-clr: #030016;
  --text-clr: #ededed;
  --highlight-clr: #c00021;
  --heading-pseudo-clr: #030e9d;

  --h1-font-size: 8rem;
  --h2-font-size: 5rem;
  --h3-font-size: 2rem;
  --heading-pseudo-font-size: 13rem;

  --default-font-size: 1.125rem;
  --font-size-s: 1rem;
  --font-size-xs: 0.875rem;

  --transition-short: all 250ms cubic-bezier(0.56, 0.93, 0.33, 0.99);
  --transition-long: all 500ms cubic-bezier(0.56, 0.93, 0.33, 0.99);
}

*:focus-visible,
.btn:focus-visible,
.btn-transparent:focus-visible,
.btn-left:focus-visible,
.btn-right:focus-visible {
  opacity: 100%;
  outline: 3px solid var(--highlight-clr);
  outline-offset: 3px;
}

img {
  max-width: 100%;
  display: block;
}

ion-icon {
  display: block;
}

body {
  font-family: "Play", sans-serif;
  font-weight: 400;
  line-height: 1;
  color: var(--text-clr);
  background-color: var(--primary-clr);
}

/***********************/
/* REUSABLE ITEMS */
/***********************/

.container-large {
  width: 95%;
  max-width: 120rem;
  margin: 0 auto;
}

.container-small {
  width: 80%;
  max-width: 70rem;
  margin: 0 auto;
}

.section {
  padding: 4rem 0 0 0;
  background-color: var(--primary-clr);
  overflow: hidden;

  transition: var(--transition-long);
}

.section--hidden {
  opacity: 0;
  transform: translateY(5rem);
}

.grid {
  display: grid;
  gap: 1rem;
}

.center {
  text-align: center;
}

.icon {
  color: var(--highlight-clr);
  width: 2rem;
  height: 2rem;
}

.source-icon {
  width: 2rem;
  height: 2rem;
  color: var(--text-clr);
  border-radius: 50%;
  transition: var(--transition-short);
}

.logo {
  height: 2rem;
}

.heading-primary,
.heading-secondary {
  letter-spacing: 2px;
  text-transform: uppercase;
}

.heading-primary {
  font-size: var(--h1-font-size);
}

.heading-secondary {
  font-size: var(--h2-font-size);
  color: var(--text-clr);
  padding: 1em 0;
  text-align: center;
  z-index: 1;
}

.heading-tertiary {
  font-size: var(--h3-font-size);
  padding-bottom: 0.875em;
  font-weight: 700;
}

.cta-text {
  font-size: var(--default-font-size);
  margin: 1.5em 0 1.5em 0;
}

.overlay {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background-color: rgb(3, 0, 22, 0.95);
  backdrop-filter: blur(2px);
  z-index: 2;
  transition: var(--transition-long);
}

.hidden {
  opacity: 0;
  visibility: hidden;
}

/***********************/
/* HEADER & NAVIGATION */
/***********************/

.header {
  background-color: var(--primary-clr);
  padding: 0.5em 1.5em;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.sticky {
  position: sticky;
  top: 0;
  z-index: 4;
  background-color: rgb(3, 0, 22, 0.95);
}

.nav-list {
  margin-left: auto;
  list-style: none;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1.5em;
}

.nav-list__link {
  position: relative;
}

.nav-list__link::after {
  display: block;
  position: absolute;
  content: "";
  width: 100%;
  height: 2px;
  margin-top: 5px;
  background-color: var(--highlight-clr);
  opacity: 0;
  transition: var(--transition-short);
}

.nav-list__link:link,
.nav-list__link:visited {
  display: inline-block;
  text-decoration: none;
  font-size: var(--default-font-size);
  letter-spacing: 2px;
  color: var(--text-clr);
}

.nav-list__link:hover.nav-list__link::after,
.nav-list__link:active.nav-list__link::after {
  opacity: 1;
}

/* MOBILE */
.btn-mobile-nav {
  border: none;
  background: none;
  cursor: pointer;

  display: none;
}

.icon-mobile-nav {
  color: var(--highlight-clr);
  width: 3rem;
  height: 3rem;
}

.icon-mobile-nav[name="close-outline"] {
  display: none;
}

/***********************/
/* HERO */
/***********************/

.section-hero {
  background-color: var(--primary-clr);
  height: 100vh;
  display: flex;
  align-items: center;
  position: relative;
  overflow: hidden;
}

.special {
  color: transparent;
  -webkit-text-stroke: 2px var(--highlight-clr);
}

.hero-intro {
  font-size: var(--default-font-size);
  padding-bottom: 1.125em;
  letter-spacing: 1px;
}

.hero-main-text {
  font-size: var(--default-font-size);
  line-height: 1.7;
  padding: 5em 0 2em 0;
  letter-spacing: 1px;
}

.btn,
.btn-transparent {
  display: inline-block;
  text-decoration: none;
  padding: 1em 1.5em;
  margin: 0.5em 1em;
  border-top-left-radius: 1rem;
  background-color: var(--highlight-clr);
  font-size: var(--default-font-size);
  font-family: inherit;
  letter-spacing: 1px;
  color: var(--text-clr);
  border: none;
  cursor: pointer;
  position: relative;
}

.btn {
  border-top-left-radius: 1rem;
  background-color: var(--highlight-clr);
}

.btn::before,
.btn::after {
  content: "";
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  transition: var(--transition-short);
}

.btn::before {
  border-top-left-radius: 1rem;
  border-top: 2px solid var(--highlight-clr);
  border-left: 2px solid var(--highlight-clr);
}

.btn::after {
  border-top-right-radius: 0;
  border-bottom: 2px solid var(--highlight-clr);
  border-right: 2px solid var(--highlight-clr);
}

.btn-mirror {
  border-top-left-radius: 0;
  border-top-right-radius: 1rem;
}

.btn-transparent {
  border-top-right-radius: 1rem;
  background-color: transparent;
}

.btn-transparent::before,
.btn-transparent::after {
  content: "";
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  transition: var(--transition-short);
}

.btn-transparent::before {
  border-top-right-radius: 1rem;
  border-top: 2px solid var(--highlight-clr);
  border-right: 2px solid var(--highlight-clr);
}

.btn-transparent::after {
  border-bottom: 2px solid var(--highlight-clr);
  border-left: 2px solid var(--highlight-clr);
}

.btn-transparent:hover.btn-transparent::before {
  transform: translate(5%, -15%);
}

.btn-transparent:hover.btn-transparent::after {
  transform: translate(-5%, 15%);
}
/* ... */

